--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "nodemon server.js",
     "db:migrate": "npx sequelize-cli db:migrate --config sequelize.config.js",
     "db:seed": "npx sequelize-cli db:seed:all --config sequelize.config.js",
-    "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all --config sequelize.config.js"
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all --config sequelize.config.js",
+    "db:drop": "npx sequelize-cli db:drop --config sequelize.config.js",
+    "db:create": "npx sequelize-cli db:create --config sequelize.config.js",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate && npm run db:seed"
   },
   "author": "Rao Nauman",
   "license": "ISC",
