--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "uuid": "^13.0.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
