--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Rao Nauman",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "joi": "^18.0.1",
